# VoxInput

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  assistant.go  chunk_test.go  flake.nix  go.mod  go.sum  listen.go  main.go  old.go  transcription.go  tui_cmd.go
.github/: dependabot.yml
.github/workflows/: check-upstream-updates.yml  validate-build.yml  validate-tag.yml
cmake/: copy_ggml_libs.cmake
internal/aec/: aec.go  aec_test.go
internal/audio/: aec_dump_test.go  aec_test.go  audio.go  audio_test.go  chunk.go  chunk_test.go  deepvqe_processor.go  localvqe_processor.go  localvqe_processor_test.go  ringbuf.go  ringbuf_test.go  wav.go
internal/conf/: conf.go
internal/deepvqe/: deepvqe.go  model.go
internal/gui/: gui.go  gui_test.go  icons_darwin.go  icons_linux.go
internal/input/: input.go  input_darwin.go  input_linux.go
internal/ipc/: client.go  client_test.go  ipc.go  ipc_test.go  server.go  server_test.go
internal/localvqe/: localvqe.go  localvqe_test.go  model.go
internal/pid/: defaults_darwin.go  defaults_linux.go  pid.go  pid_test.go
internal/semver/: semver.go
internal/tui/: chat.go  chat_test.go  logview.go  styles.go  tui.go  tui_test.go
scripts/: check-upstream-updates.sh
